--- a/lib/quizzaz_web/live/play_live/index.html.heex
+++ b/lib/quizzaz_web/live/play_live/index.html.heex
@@ -16,7 +16,7 @@
           </div>
 
           <div class="p-4">
-            <%= submit("Join Game", class: "btn-blue" ) %>
+            <%= submit("Join Game", class: "btn-blue") %>
           </div>
         </div>
       </.form>
@@ -30,7 +30,9 @@
       <%= case @question do %>
         <% %Quizzaz.Games.Questions.MultipleChoice{} = q -> %>
           <%= for {choice, i} <- Enum.with_index(q.choices, 1) do %>
-            <button class="btn-blue" phx-click="answer_question" phx-value-answer={i}><%= choice %></button>
+            <button class="btn-blue" phx-click="answer_question" phx-value-answer={i}>
+              <%= choice %>
+            </button>
           <% end %>
         <% %Quizzaz.Games.Questions.OpenEnded{} -> %>
           <h4>Display text input</h4>
@@ -49,24 +51,28 @@
           </.form>
         <% %Quizzaz.Games.Questions.ScrambleLetters{} -> %>
           <h4>Display scrambled letters</h4>
-	  <div phx-hook="Drag" id="scramble-letters-container" class="m-12" >
-	    <ul class="dropzone-letters" id="scramble-letters-list">
-	      <%= for {letter, i} <- Enum.with_index(@letters) do %>
-	        <li class="drag-item draggable-item" draggable="true" id={to_string(i)}><%= letter %></li>
+          <div phx-hook="Drag" id="scramble-letters-container" class="m-12">
+            <ul class="dropzone-letters" id="scramble-letters-list">
+              <%= for {letter, i} <- Enum.with_index(@letters) do %>
+                <li class="drag-item draggable-item" draggable="true" id={to_string(i)}>
+                  <%= letter %>
+                </li>
               <% end %>
-	    </ul>
-	    <button class="btn-blue mt-12" phx-click="answer_scramble_letters">submit</button>
-	  </div>
+            </ul>
+            <button class="btn-blue mt-12" phx-click="answer_scramble_letters">submit</button>
+          </div>
         <% %Quizzaz.Games.Questions.ScrambleWords{} -> %>
           <h4>Display scrambled list</h4>
-	  <div phx-hook="Drag" id="scramble-word-container" class="m-12" >
-	    <ul class="dropzone-words" id="scramble-word-list">
-	      <%= for {word, i} <- Enum.with_index(@words) do %>
-	        <li class="drag-item draggable-item" draggable="true" id={to_string(i)}><%= word %></li>
+          <div phx-hook="Drag" id="scramble-word-container" class="m-12">
+            <ul class="dropzone-words" id="scramble-word-list">
+              <%= for {word, i} <- Enum.with_index(@words) do %>
+                <li class="drag-item draggable-item" draggable="true" id={to_string(i)}>
+                  <%= word %>
+                </li>
               <% end %>
-	    </ul>
-	    <button class="btn-blue mt-12" phx-click="answer_scramble_words">submit</button>
-	  </div>
+            </ul>
+            <button class="btn-blue mt-12" phx-click="answer_scramble_words">submit</button>
+          </div>
         <% _ -> %>
           <h4>Waiting for question</h4>
       <% end %>
