Add alpine, finish edit, improve layout

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -77,10 +77,10 @@
 }
 
 /* LiveView specific classes for your customization */
-.phx-no-feedback.invalid-feedback,
+/* .phx-no-feedback.invalid-feedback,
 .phx-no-feedback .invalid-feedback {
   display: none;
-}
+} */
 
 .phx-click-loading {
   opacity: 0.5;
