--- a/lib/quizzaz_web/live/game_live/components/form_component.html.heex
+++ b/lib/quizzaz_web/live/game_live/components/form_component.html.heex
@@ -1,12 +1,13 @@
-<div>
+<div x-data="{'showModal': false}" class="card">
   <h2><%= @title %></h2>
 
+  <div class="card">
   <.form let={f} for={@changeset} id="game-form" phx-target={@myself} phx-change="validate">
     <%= label(f, :name, class: "input-label") %>
     <%= text_input(f, :name, class: "input") %>
     <%= error_tag(f, :name) %>
 
-    <%= label(f, :type, class: "input-label") %>
+    <%= label(f, :type, "Game Type", class: "input-label") %>
     <%= select(f, :type, Quizzaz.Games.Game.game_types()) %>
     <%= error_tag(f, :type) %>
   </.form>
@@ -18,24 +19,41 @@
     phx-target={@myself}
     phx-change="choose_question_type"
   >
+    <%= label(f, :question_type, "Question Type", class: "input-label") %>
     <%= select(f, :question_type, Quizzaz.Games.Question.question_types(),
       prompt: "select question type"
     ) %>
   </.form>
 
+  <button @click="showModal = true" disabled={is_nil(@current_question_type)} class="btn-blue m-4">Add Question</button>
+  </div>
+
+
   <%= if (not is_nil(@current_question_type) and @question_action == :new_question) or @question_action == :edit_question do %>
-    <.modal return_to={@modal_return_to}>
-      <.live_component
-        module={QuizzazWeb.GameLive.QuestionComponent}
-        id="question-form"
-        current_question_type={@current_question_type}
-        question_action={@question_action}
-        current_question_changeset={@current_question_changeset}
-        live_target={@myself}
-      />
-    </.modal>
+    <div
+      class="overflow-auto"
+      style="background-color: rgba(0,0,0,0.5)"
+      x-show="showModal"
+      :class="{ 'absolute inset-0 z-10 flex items-center justify-center': showModal }"
+    >
+      <div
+        x-show="showModal"
+        @click.away="showModal = false"
+        class="bg-white w-11/12 md:max-w-md mx-auto rounded shadow-lg py-4 text-left px-6"
+      >
+        <.live_component
+          module={QuizzazWeb.GameLive.QuestionComponent}
+          id="question-form"
+          current_question_type={@current_question_type}
+          question_action={@question_action}
+          current_question_changeset={@current_question_changeset}
+          live_target={@myself}
+        />
+      </div>
+    </div>
   <% end %>
 
+  <div class="card">
   <%= if @questions != [] do %>
     <%= for {question, index} <- Enum.with_index(@questions, 1) do %>
       <%= case question do %>
@@ -54,16 +72,16 @@
         <% _ -> %>
           <% nil %>
       <% end %>
-      <button phx-click="edit_question" phx-value-question-index={index} phx-target={@myself}>
+      <button @click="showModal = true" phx-click="edit_question" phx-value-question-index={index} phx-target={@myself} class="btn-blue">
         edit
       </button>
-      <button phx-click="delete_question" phx-value-question-index={index} phx-target={@myself}>
+      <button phx-click="delete_question" phx-value-question-index={index} phx-target={@myself} class="btn-blue">
         delete
       </button>
     <% end %>
   <% end %>
-
-  <button class="btn-blue" phx-click="save" phx-target={@myself} class="btn-blue">
+  </div>
+  <button class="btn-blue m-4" phx-click="save" phx-target={@myself}>
     Save Game
   </button>
 </div>
