--- a/lib/quizzaz_web/live/game_live/show.html.heex
+++ b/lib/quizzaz_web/live/game_live/show.html.heex
@@ -1,31 +1,23 @@
-<h1>Show Game</h1>
-
-<ul>
-  <li>
-    <strong>Name:</strong>
-    <%= @game.name %>
-    <%= for {%Question{content: content}, index} <- Enum.with_index(@game.questions) do %>
-      <%= case content do %>
-        <% %MultipleChoice{answer: _answer, prompt: prompt, choices: _choices} -> %>
-          <p><%= index %></p>
-          <p><%= prompt %></p>
-        <% %ScrambleLetters{answer: answer, scrambled: _scrambled} -> %>
-          <p><%= index %></p>
-          <p><%= answer %></p>
-        <% %ScrambleWords{answer_list: answer_list, scrambled_list: _scrambled} -> %>
-          <p><%= index %></p>
-          <p><%= Enum.join(answer_list, " ") %></p>
-        <% %OpenEnded{prompt: prompt} -> %>
-          <p><%= index %></p>
-          <p><%= prompt %></p>
-        <% _ -> %>
-          <% nil %>
-      <% end %>
-    <% end %>
-  </li>
-</ul>
-
-<span>
-  <%= live_redirect("Edit", to: Routes.game_edit_path(@socket, :edit, @game), class: "button") %>
-</span>
-| <span><%= live_redirect("Back", to: Routes.game_index_path(@socket, :index)) %></span>
+<h1><%= @game.name %></h1>
+<%= for {%Question{content: content}, index} <- Enum.with_index(@game.questions) do %>
+  <%= case content do %>
+    <% %MultipleChoice{answer: _answer, prompt: prompt, choices: _choices} -> %>
+      <p><%= index %></p>
+      <p><%= prompt %></p>
+    <% %ScrambleLetters{answer: answer, scrambled: _scrambled} -> %>
+      <p><%= index %></p>
+      <p><%= answer %></p>
+    <% %ScrambleWords{answer_list: answer_list, scrambled_list: _scrambled} -> %>
+      <p><%= index %></p>
+      <p><%= Enum.join(answer_list, " ") %></p>
+    <% %OpenEnded{prompt: prompt} -> %>
+      <p><%= index %></p>
+      <p><%= prompt %></p>
+    <% _ -> %>
+      <% nil %>
+  <% end %>
+<% end %>
+<div class="m-8">
+  <%= live_redirect("Edit", to: Routes.game_edit_path(@socket, :edit, @game), class: "btn-blue") %>
+  <%= live_redirect("Back", to: Routes.game_index_path(@socket, :index), class: "btn-blue") %>
+</div>
