--- a/lib/quizzaz_web/templates/layout/root.html.heex
+++ b/lib/quizzaz_web/templates/layout/root.html.heex
@@ -15,11 +15,11 @@
     >
     </script>
   </head>
-  <body>
+  <body class="bg-sky-500">
     <header>
       <%= render("_user_menu.html", assigns) %>
     </header>
-    <div id="content">
+    <div class="w-full">
       <%= @inner_content %>
     </div>
   </body>
