--- a/lib/quizzaz_web/templates/layout/_user_menu.html.heex
+++ b/lib/quizzaz_web/templates/layout/_user_menu.html.heex
@@ -1,41 +1,423 @@
-<div class="flex flex-col card items-center">
-  <h1 class="m-4">Quizzaz</h1>
-  <%= if @current_user do %>
-    <p class="m-4"><%= @current_user.email %></p>
-    <div class="m-4">
-      <%= link("Settings", to: Routes.user_settings_path(@conn, :edit), class: "btn-blue") %>
-    </div>
-    <div class="m-4">
-      <%= link("Log out",
-        to: Routes.user_session_path(@conn, :delete),
-        method: :delete,
-        class: "btn-blue"
-      ) %>
-    </div>
-    <div class="m-4">
-      <%= link("My Games",
-        to: Routes.game_index_path(@conn, :index),
-        class: "btn-blue"
-      ) %>
-    </div>
-    <div class="m-4">
-      <%= link("Home",
-        to: Routes.page_path(@conn, :home),
-        class: "btn-blue"
-      ) %>
-    </div>
-  <% else %>
-    <div class="m-4">
-      <%= link("Register", to: Routes.user_registration_path(@conn, :new), class: "btn-blue") %>
-    </div>
-    <div class="m-4">
-      <%= link("Log in", to: Routes.user_session_path(@conn, :new), class: "btn-blue") %>
-    </div>
-    <div class="m-4">
-      <%= link("Home",
-        to: Routes.page_path(@conn, :home),
-        class: "btn-blue"
-      ) %>
-    </div>
-  <% end %>
+<style>
+  [x-cloak] { display: none }
+</style>
+<div class="flex flex-col items-center" x-data="{'showMenu': false}">
+  <div class="flex flex-row items-center justify-between lg:justify-around lg:gap-20 w-full p-8 lg:p-20">
+    <%= link("Quizzaz",
+      to: Routes.page_path(@conn, :home),
+      class: "text-3xl lg:text-8xl font-bold text-yellow-400"
+    ) %>
+    <img
+      @click="showMenu = true"
+      class="w-20 lg:hidden"
+      src={Routes.static_path(@conn, "/images/question.png")}
+      alt="question head"
+    />
+    <img
+      class="hidden lg:block w-48"
+      src={Routes.static_path(@conn, "/images/question.png")}
+      alt="question head"
+    />
+  </div>
+  <div
+    x-show="showMenu"
+    x-cloak
+    @click.outside="showMenu = false"
+    id="mobile-menu"
+    class="absolute top-24 right-4 bg-purple-600 rounded-lg p-4 text-yellow-400 font-bold shadow-lg"
+  >
+    <%= if @current_user do %>
+      <p class="m-4"><%= @current_user.email %></p>
+      <a class="m-4 flex items-start gap-2" href={Routes.user_settings_path(@conn, :edit)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
+          />
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
+          />
+        </svg>
+        <p>Settings</p>
+      </a>
+      <%= link to: Routes.user_session_path(@conn, :delete), method: :delete, class: "m-4 flex items-start gap-2" do %>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"
+          />
+        </svg>
+        <p>Log Out</p>
+      <% end %>
+      <a class="m-4 flex items-start gap-2" href={Routes.game_index_path(@conn, :index)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
+          />
+        </svg>
+        <p>Create</p>
+      </a>
+      <a class="m-4 flex items-start gap-2" href={Routes.game_index_path(@conn, :index)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z"
+          />
+        </svg>
+        <p>My Stuff</p>
+      </a>
+      <a class="m-4 flex items-start gap-2" href={Routes.game_index_path(@conn, :index)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path d="M12 14l9-5-9-5-9 5 9 5z" />
+          <path d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z" />
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+          />
+        </svg>
+        <p>Browse</p>
+      </a>
+      <a class="m-4 flex items-start gap-2" href={Routes.play_index_path(@conn, :index)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z"
+          />
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+          />
+        </svg>
+        <p>Play</p>
+      </a>
+    <% else %>
+      <a class="m-4 flex items-start gap-2" href={Routes.user_registration_path(@conn, :new)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z"
+          />
+        </svg>
+        <p>Sign Up</p>
+      </a>
+      <a class="m-4 flex items-start gap-2" href={Routes.user_session_path(@conn, :new)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"
+          />
+        </svg>
+        <p>Log In</p>
+      </a>
+      <a class="m-4 flex items-start gap-2" href={Routes.game_index_path(@conn, :index)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path d="M12 14l9-5-9-5-9 5 9 5z" />
+          <path d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z" />
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+          />
+        </svg>
+        <p>Browse</p>
+      </a>
+      <a class="m-4 flex items-start gap-2" href={Routes.play_index_path(@conn, :index)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z"
+          />
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+          />
+        </svg>
+        <p>Play</p>
+      </a>
+    <% end %>
+  </div>
+  <div
+    id="desktop-menu"
+    class="hidden lg:flex w-3/4 items-center justify-around mx-20 bg-purple-600 rounded-lg p-4 text-yellow-400 font-bold"
+  >
+    <%= if @current_user do %>
+      <a class="m-4 flex flex-col items-center gap-2" href={Routes.user_settings_path(@conn, :edit)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-10 w-10 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"
+          />
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
+          />
+        </svg>
+        <p class="text-3xl">Settings</p>
+      </a>
+      <%= link to: Routes.user_session_path(@conn, :delete), method: :delete, class: "m-4 flex flex-col items-center gap-2" do %>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-10 w-10 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1"
+          />
+        </svg>
+        <p class="text-3xl">Log Out</p>
+      <% end %>
+      <a class="m-4 flex flex-col items-center gap-2" href={Routes.game_index_path(@conn, :index)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-10- w-10 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
+          />
+        </svg>
+        <p class="text-3xl">Create</p>
+      </a>
+      <a class="m-4 flex flex-col items-center gap-2" href={Routes.game_index_path(@conn, :index)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-10 w-10 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z"
+          />
+        </svg>
+        <p class="text-3xl">My Stuff</p>
+      </a>
+      <a class="m-4 flex flex-col items-center gap-2" href={Routes.game_index_path(@conn, :index)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-10 w-10 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path d="M12 14l9-5-9-5-9 5 9 5z" />
+          <path d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z" />
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+          />
+        </svg>
+        <p class="text-3xl">Browse</p>
+      </a>
+      <a class="m-4 flex flex-col items-center gap-2" href={Routes.play_index_path(@conn, :index)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-10 w-10 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z"
+          />
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+          />
+        </svg>
+        <p class="text-3xl">Play</p>
+      </a>
+    <% else %>
+      <a
+        class="m-4 flex flex-col items-center gap-2"
+        href={Routes.user_registration_path(@conn, :new)}
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-10 w-10 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z"
+          />
+        </svg>
+        <p class="text-3xl">Sign Up</p>
+      </a>
+      <a class="m-4 flex flex-col items-center gap-2" href={Routes.user_session_path(@conn, :new)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-10 w-10 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"
+          />
+        </svg>
+        <p class="text-3xl">Log In</p>
+      </a>
+      <a class="m-4 flex flex-col items-center gap-2" href={Routes.game_index_path(@conn, :index)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-10 w-10 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path d="M12 14l9-5-9-5-9 5 9 5z" />
+          <path d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z" />
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
+          />
+        </svg>
+        <p class="text-3xl">Browse</p>
+      </a>
+      <a class="m-4 flex flex-col items-center gap-2" href={Routes.play_index_path(@conn, :index)}>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-10 w-10 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z"
+          />
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+          />
+        </svg>
+        <p class="text-3xl">Play</p>
+      </a>
+    <% end %>
+  </div>
 </div>
