--- a/lib/quizzaz_web/templates/page/home.html.heex
+++ b/lib/quizzaz_web/templates/page/home.html.heex
@@ -1,8 +1,1 @@
-<div>
-  <div class="m-8">
-    <%= link("Play", to: Routes.play_index_path(@conn, :index), class: "btn-blue m-4") %>
-  </div>
-  <div class="m-8">
-    <%= link("Browse Games", to: Routes.page_path(@conn, :index), class: "btn-blue m-4") %>
-  </div>
-</div>
+<div></div>
