--- a/lib/quizzaz_web/live/game_live/index.html.heex
+++ b/lib/quizzaz_web/live/game_live/index.html.heex
@@ -1,24 +1,25 @@
-<div class="flex flex-col items-center gap-4">
-  <h1>My Games</h1>
-
-  <%= for game <- @games do %>
-    <div class="card">
-      <%= live_redirect(game.name,
-        to: Routes.game_show_path(@socket, :show, game),
-        class: "btn-blue"
-      ) %>
-      <%= live_patch("Edit", to: Routes.game_edit_path(@socket, :edit, game), class: "btn-blue") %>
-      <%= link("Delete",
-        to: "#",
-        phx_click: "delete",
-        phx_value_id: game.id,
-        data: [confirm: "Are you sure?"],
-        class: "btn-blue"
-      ) %>
-    </div>
-  <% end %>
-
-  <span class="m-8">
-    <%= live_patch("New Game", to: Routes.game_new_path(@socket, :new), class: "btn-blue") %>
-  </span>
+<div class="flex flex-col items-center my-8 text-center">
+  <div class="flex flex-col w-3/4 items-center gap-4 justify-around mx-20 bg-purple-600 rounded-lg py-8 lg:py-20 text-yellow-400 font-bold">
+    <%= for game <- @games do %>
+      <div class="flex flex-col lg:flex-row gap-2 justify-between items-center bg-cyan-200 rounded-xl p-4 lg:p-8 w-3/4 text-black lg:text-3xl">
+        <div class="flex flex-col items-center lg:items-start gap-2">
+          <p class="text-xl lg:text-5xl"><%= game.name %></p>
+          <p><%= "#{game.type} / #{game.questions} questions" %></p>
+        </div>
+        <div class="flex flex-row lg:flex-col items-center gap-12 lg:gap-2">
+          <%= live_patch("Edit",
+            to: Routes.game_edit_path(@socket, :edit, game.id),
+            class: "text-blue-900"
+          ) %>
+          <%= link("Delete",
+            to: "#",
+            phx_click: "delete",
+            phx_value_id: game.id,
+            data: [confirm: "Are you sure?"],
+            class: "text-red-700"
+          ) %>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
