--- a/lib/quizzaz_web/live/host_live/index.html.heex
+++ b/lib/quizzaz_web/live/host_live/index.html.heex
@@ -1,46 +1,143 @@
-<div>
+<div class="flex flex-col items-center">
   <%= case @state do %>
     <% state when state in [:waiting_for_players, :created] -> %>
-      <h3>To join this game please enter the following code:</h3>
-      <p><%= @session_id %></p>
+      <img
+        class="w-48 m-20"
+        src={Routes.static_path(@socket, "/images/question.png")}
+        alt="question head"
+      />
+      <div class="flex flex-col w-3/4 items-center gap-4 justify-around mx-20 bg-purple-600 rounded-lg py-8 text-yellow-400 font-bold">
+        <h3 class="text-3xl">To join this game please enter the following code:</h3>
+        <p class="text-black text-5xl"><%= @session_id %></p>
 
-      <h3>Players:</h3>
-      <%= for player <- @game_session.players do %>
-        <p><%= player.name %></p>
-      <% end %>
-      <button class="btn-blue" phx-click="start-game">Start Game</button>
+        <div class="flex flex-row flex-wrap gap-12 py-4 px-20">
+          <%= for player <- @game_session.players do %>
+            <p class="text-3xl text-cyan-200"><%= player.name %></p>
+          <% end %>
+        </div>
+
+        <button phx-click="start-game" class="m-4 flex flex-col items-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-8 w-8 lg:h-10 lg:w-10 text-cyan-200"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M17.657 18.657A8 8 0 016.343 7.343S7 9 9 10c0-2 .5-5 2.986-7C14 5 16.09 5.777 17.656 7.343A7.975 7.975 0 0120 13a7.975 7.975 0 01-2.343 5.657z"
+            />
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M9.879 16.121A3 3 0 1012.015 11L11 14H9c0 .768.293 1.536.879 2.121z"
+            />
+          </svg>
+          <p class="font-bold text-xl lg:text-3xl">Start Game</p>
+        </button>
+        <.form
+          let={f}
+          for={:select_duration}
+          phx-change="select_duration"
+          class="flex flex-col items-center w-full"
+        >
+          <%= label(f, :duration, "Question Duration", class: "text-cyan-200 pb-2") %>
+          <%= select(f, :duration, 5..3000,
+            selected: 30,
+            class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg w-1/8"
+          ) %>
+        </.form>
+      </div>
     <% :playing -> %>
-      <h3>Playing Game</h3>
-      <p>time left:</p>
-      <p><%= @countdown %></p>
-      <%= if @question != %{} do %>
-        <%= case @question do %>
-          <% %Quizzaz.Games.Questions.MultipleChoice{} = q -> %>
-            <h4><%= q.prompt %></h4>
-          <% %Quizzaz.Games.Questions.OpenEnded{} = q -> %>
-            <h4><%= q.prompt %></h4>
-          <% %Quizzaz.Games.Questions.ScrambleLetters{} = q -> %>
-            <h4>Unscramble</h4>
-            <h4><%= q.scrambled %></h4>
-          <% %Quizzaz.Games.Questions.ScrambleWords{} = q -> %>
-            <h4>Unscramble</h4>
-            <%= for word <- q.scrambled_list do %>
-              <span><%= word %></span>
-            <% end %>
+      <div class="flex flex-col w-3/4 items-center gap-4 justify-around my-12 mx-20 bg-purple-600 rounded-lg py-8 text-yellow-400 font-bold">
+        <h3 class="text-5xl">Playing</h3>
+        <div class="flex flex-row gap-8 text-3xl text-cyan-200">
+          <p>time left:</p>
+          <p><%= @countdown %></p>
+        </div>
+        <%= if @question != %{} do %>
+          <%= case @question do %>
+            <% %Quizzaz.Games.Questions.MultipleChoice{} = q -> %>
+              <h4 class="text-5xl"><%= q.prompt %></h4>
+            <% %Quizzaz.Games.Questions.OpenEnded{} = q -> %>
+              <h4 class="text-5xl"><%= q.prompt %></h4>
+            <% %Quizzaz.Games.Questions.ScrambleLetters{} = q -> %>
+              <h4 class="text-5xl">Unscramble</h4>
+              <h4 class="text-5xl"><%= q.scrambled %></h4>
+            <% %Quizzaz.Games.Questions.ScrambleWords{} = q -> %>
+              <h4 class="text-5xl">Unscramble</h4>
+              <%= for word <- q.scrambled_list do %>
+                <span class="text-5xl"><%= word %></span>
+              <% end %>
+          <% end %>
         <% end %>
-      <% end %>
+        <button phx-click="pause_game" class="m-4 flex flex-col items-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-8 w-8 text-cyan-200"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+            />
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M9 10a1 1 0 011-1h4a1 1 0 011 1v4a1 1 0 01-1 1h-4a1 1 0 01-1-1v-4z"
+            />
+          </svg>
+          <p class="font-bold text-xl lg:text-3xl">Stop Question</p>
+        </button>
+      </div>
     <% :paused -> %>
-      <h3>Game is paused</h3>
-      <button phx-click="next_question">Next question</button>
-      <%= for player <- @players do %>
-        <p><%= player.name %></p>
-        <p><%= player.score %></p>
-      <% end %>
+      <div class="flex flex-col w-3/4 items-center gap-4 justify-around my-12 mx-20 bg-purple-600 rounded-lg py-8 text-yellow-400 font-bold">
+        <h3 class="text-5xl">Game is Paused</h3>
+        <button phx-click="next_question" class="m-4 flex flex-col items-center">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-8 w-8 text-cyan-200"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"
+            />
+          </svg>
+
+          <p class="font-bold text-xl lg:text-3xl">Next Question</p>
+        </button>
+        <div class="flex flex-row items-center flex-wrap justify-around gap-8 mt-8">
+          <%= for player <- @players do %>
+            <div class="w-1/4 flex flex-col items-start gap-2 p-4 px-20 text-cyan-200">
+              <p class="text-3xl"><%= player.name %></p>
+              <p class="text-xl">score: <%= player.score %></p>
+            </div>
+          <% end %>
+        </div>
+      </div>
     <% :finished -> %>
-      <h3>Game is finished</h3>
-      <%= for player <- @players do %>
-        <p><%= player.name %></p>
-        <p><%= player.score %></p>
-      <% end %>
+      <div class="flex flex-col w-3/4 items-center gap-4 justify-around my-12 mx-20 bg-purple-600 rounded-lg py-8 text-yellow-400 font-bold">
+        <h3 class="text-5xl">Game is finished</h3>
+        <div class="flex flex-row items-center flex-wrap justify-around gap-8 mt-8">
+          <%= for player <- @players do %>
+            <div class="w-1/4 flex flex-col items-start gap-2 p-4 px-20 text-cyan-200">
+              <p class="text-3xl"><%= player.name %></p>
+              <p class="text-xl">score: <%= player.score %></p>
+            </div>
+          <% end %>
+        </div>
+      </div>
   <% end %>
 </div>
