--- a/lib/quizzaz_web/templates/layout/game.html.heex
+++ b/lib/quizzaz_web/templates/layout/game.html.heex
@@ -15,8 +15,8 @@
     >
     </script>
   </head>
-  <body>
-    <div id="content">
+  <body class="bg-sky-500">
+    <div class="w-full">
       <%= @inner_content %>
     </div>
   </body>
