--- a/lib/quizzaz_web/live/game_live/components/form_component.html.heex
+++ b/lib/quizzaz_web/live/game_live/components/form_component.html.heex
@@ -1,50 +1,73 @@
-<div x-data="{'showModal': false}" class="card">
-  <h2><%= @title %></h2>
+<div x-data="{'showModal': false}" class="flex flex-col items-center w-full">
+  <.form
+    let={f}
+    for={@changeset}
+    id="game-form"
+    phx-target={@myself}
+    phx-change="validate"
+    class="flex flex-col lg:items-center w-full px-4 md:px-12"
+  >
+    <%= label(f, :name, "Game Title", class: "lg:text-2xl pt-4 pb-2") %>
+    <%= text_input(f, :name,
+      class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+    ) %>
+    <%= error_tag(f, :name) %>
+    <%= label(f, :type, "Game Type", class: "lg:text-2xl pt-4 pb-2") %>
+    <%= select(f, :type, Quizzaz.Games.Game.game_types(),
+      class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+    ) %>
+    <%= error_tag(f, :type) %>
+  </.form>
 
-  <div class="card">
-    <.form let={f} for={@changeset} id="game-form" phx-target={@myself} phx-change="validate">
-      <%= label(f, :name, class: "input-label") %>
-      <%= text_input(f, :name, class: "input") %>
-      <%= error_tag(f, :name) %>
+  <.form
+    let={f}
+    for={@add_question_changeset}
+    phx-target={@myself}
+    phx-change="choose_question_type"
+    class="flex flex-col lg:items-center w-full px-4 md:px-12"
+  >
+    <%= label(f, :question_type, "Question Type", class: "lg:text-2xl pt-4 pb-2") %>
+    <%= select(f, :question_type, Quizzaz.Games.Question.question_types(),
+      prompt: "select question type",
+      class: "rounded-lg mb-2 md:mb-4 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+    ) %>
+  </.form>
 
-      <%= label(f, :type, "Game Type", class: "input-label") %>
-      <%= select(f, :type, Quizzaz.Games.Game.game_types()) %>
-      <%= error_tag(f, :type) %>
-    </.form>
-
-    <.form
-      let={f}
-      for={@add_question_changeset}
-      id="add-question-form"
-      phx-target={@myself}
-      phx-change="choose_question_type"
+  <button
+    @click="showModal = true"
+    disabled={is_nil(@current_question_type)}
+    type="submit"
+    class="md:mb-4"
+  >
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class={
+        "#{if is_nil(@current_question_type), do: "text-gray-200", else: "text-cyan-200"} h-8 w-8"
+      }
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke="currentColor"
+      stroke-width="2"
     >
-      <%= label(f, :question_type, "Question Type", class: "input-label") %>
-      <%= select(f, :question_type, Quizzaz.Games.Question.question_types(),
-        prompt: "select question type"
-      ) %>
-    </.form>
-
-    <button
-      @click="showModal = true"
-      disabled={is_nil(@current_question_type)}
-      class="btn-blue m-4"
-    >
-      Add Question
-    </button>
-  </div>
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"
+      />
+    </svg>
+  </button>
 
   <%= if (not is_nil(@current_question_type) and @question_action == :new_question) or @question_action == :edit_question do %>
     <div
       class="overflow-auto"
       style="background-color: rgba(0,0,0,0.5)"
       x-show="showModal"
-      :class="{ 'absolute inset-0 z-10 flex items-center justify-center': showModal }"
+      :class="{ 'fixed inset-0 z-10 flex items-center justify-center': showModal }"
     >
       <div
         x-show="showModal"
-        @click.away="showModal = false"
-        class="bg-white w-11/12 md:max-w-md mx-auto rounded shadow-lg py-4 text-left px-6"
+        x-on:click.away="showModal = false"
+        class="bg-purple-900 w-11/12 md:max-w-md lg:max-w-lg mx-auto rounded-lg shadow-lg py-4 text-left px-6"
       >
         <.live_component
           module={QuizzazWeb.GameLive.QuestionComponent}
@@ -58,46 +81,65 @@
     </div>
   <% end %>
 
-  <div class="card">
-    <%= if @questions != [] do %>
-      <%= for {question, index} <- Enum.with_index(@questions, 1) do %>
-        <%= case question do %>
-          <% %{answer: _answer, prompt: prompt, choices: _choices} -> %>
-            <p><%= index %></p>
-            <p><%= prompt %></p>
-          <% %{answer: answer, scrambled: _scrambled} -> %>
-            <p><%= index %></p>
-            <p><%= answer %></p>
-          <% %{answer_list: answer_list, scrambled_list: _scrambled} -> %>
-            <p><%= index %></p>
-            <p><%= Enum.join(answer_list, " ") %></p>
-          <% %{prompt: prompt} -> %>
-            <p><%= index %></p>
-            <p><%= prompt %></p>
-          <% _ -> %>
-            <% nil %>
-        <% end %>
-        <button
-          @click="showModal = true"
-          phx-click="edit_question"
-          phx-value-question-index={index}
-          phx-target={@myself}
-          class="btn-blue"
-        >
-          edit
-        </button>
-        <button
-          phx-click="delete_question"
-          phx-value-question-index={index}
-          phx-target={@myself}
-          class="btn-blue"
-        >
-          delete
-        </button>
-      <% end %>
+  <%= if @questions != [] do %>
+    <%= for {question, index} <- Enum.with_index(@questions, 1) do %>
+      <div class="flex flex-col lg:flex-row justify-between items-center bg-cyan-200 rounded-xl p-4 lg:p-8 w-3/4 text-black lg:text-3xl m-4">
+        <p class="self-start"><%= index %>)</p>
+        <div class="flex flex-col items-center gap-2 mb-4">
+          <%= case question do %>
+            <% %MultipleChoice{answer: _answer, prompt: prompt, choices: _choices} -> %>
+              <p><%= prompt %></p>
+              <p class="font-normal">multiple choice</p>
+            <% %ScrambleLetters{answer: answer, scrambled: _scrambled} -> %>
+              <p><%= answer %></p>
+              <p class="font-normal">scramble letters</p>
+            <% %ScrambleWords{answer_list: answer_list, scrambled_list: _scrambled} -> %>
+              <p><%= Enum.join(answer_list, " ") %></p>
+              <p class="font-normal">scramble words</p>
+            <% %OpenEnded{prompt: prompt} -> %>
+              <p><%= prompt %></p>
+              <p class="font-normal">open ended</p>
+            <% _ -> %>
+              <% nil %>
+          <% end %>
+        </div>
+        <div class="flex flex-row lg:flex-col items-center gap-12 lg:gap-2">
+          <button
+            @click="showModal = true"
+            phx-click="edit_question"
+            phx-value-question-index={index}
+            phx-target={@myself}
+            class="text-blue-900"
+          >
+            edit
+          </button>
+          <button
+            phx-click="delete_question"
+            phx-value-question-index={index}
+            phx-target={@myself}
+            class="text-red-700"
+          >
+            delete
+          </button>
+        </div>
+      </div>
     <% end %>
-  </div>
-  <button class="btn-blue m-4" phx-click="save" phx-target={@myself}>
-    Save Game
+  <% end %>
+  <button phx-click="save" phx-target={@myself} class="m-4 flex flex-col items-center">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      class="h-8 w-8 text-cyan-200"
+      fill="none"
+      viewBox="0 0 24 24"
+      stroke="currentColor"
+      stroke-width="2"
+    >
+      <path
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        d="M8 7H5a2 2 0 00-2 2v9a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-3m-1 4l-3 3m0 0l-3-3m3 3V4"
+      />
+    </svg>
+    <p class="font-bold text-xl lg:text-3xl">Save Game</p>
   </button>
 </div>
