--- a/lib/quizzaz_web/live/play_live/index.html.heex
+++ b/lib/quizzaz_web/live/play_live/index.html.heex
@@ -1,32 +1,63 @@
-<div>
+<div class="flex flex-col items-center">
   <%= case @state do %>
     <% :not_joined -> %>
-      <.form let={f} for={@join_changeset} phx-change="validate" phx-submit="join">
-        <div class="flex flex-col">
-          <div>
-            <%= label(f, :session_id, class: "input-label") %>
-            <%= text_input(f, :session_id, class: "input") %>
-            <%= error_tag(f, :session_id) %>
-          </div>
+      <img
+        class="w-28 m-12"
+        src={Routes.static_path(@socket, "/images/question.png")}
+        alt="question head"
+      />
+      <div class="flex flex-col w-3/4 items-center gap-4 justify-around mx-20 bg-purple-600 rounded-lg py-8 text-yellow-400 font-bold">
+        <.form
+          let={f}
+          for={@join_changeset}
+          phx-change="validate"
+          phx-submit="join"
+          class="flex flex-col items-center w-full"
+        >
+          <%= label(f, :session_id, class: "text-cyan-200 pt-4 pb-2") %>
+          <%= text_input(f, :session_id,
+            class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg w-3/4 lg:w-1/3"
+          ) %>
+          <%= error_tag(f, :session_id) %>
 
-          <div>
-            <%= label(f, :name, class: "input-label") %>
-            <%= text_input(f, :name, class: "input") %>
-            <%= error_tag(f, :name) %>
-          </div>
+          <%= label(f, :name, class: "text-cyan-200 pt-4 pb-2") %>
+          <%= text_input(f, :name,
+            class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg w-3/4 lg:w-1/3"
+          ) %>
+          <%= error_tag(f, :name) %>
 
-          <div class="p-4">
-            <%= submit("Join Game", class: "btn-blue") %>
-          </div>
-        </div>
-      </.form>
+          <button type="submit" class="m-4 flex flex-col items-center">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-8 w-8 lg:h-10 lg:w-10 text-cyan-200"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.657 18.657A8 8 0 016.343 7.343S7 9 9 10c0-2 .5-5 2.986-7C14 5 16.09 5.777 17.656 7.343A7.975 7.975 0 0120 13a7.975 7.975 0 01-2.343 5.657z"
+              />
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M9.879 16.121A3 3 0 1012.015 11L11 14H9c0 .768.293 1.536.879 2.121z"
+              />
+            </svg>
+            <p class="font-bold text-xl lg:text-3xl">Join Game</p>
+          </button>
+        </.form>
+      </div>
     <% :joined -> %>
-      <h3>You have joined the game!</h3>
-      <h3>Please wait for the game to start</h3>
-      <p><%= @session_id %></p>
-      <p><%= @name %></p>
+      <div class="my-12 lg:my-20 p-8 lg:p-20 flex flex-col w-3/4 items-center gap-4 lg:gap-12 justify-around mx-20 bg-purple-600 rounded-lg py-8 text-yellow-400 font-bold">
+        <h3 class="text-3xl lg:text-5xl text-center">Welcome to the game!</h3>
+        <p class="text-3xl lg:text-5xl text-cyan-200"><%= @name %></p>
+        <h3 class="text-center lg:text-2xl">Please wait for the game to start</h3>
+        <p class="text-cyan-200 lg:text-2xl"><%= @session_id %></p>
+      </div>
     <% :playing -> %>
-      <h3>You are playing the game</h3>
       <%= case @question do %>
         <% %Quizzaz.Games.Questions.MultipleChoice{} = q -> %>
           <%= for {choice, i} <- Enum.with_index(q.choices, 1) do %>
@@ -35,18 +66,34 @@
             </button>
           <% end %>
         <% %Quizzaz.Games.Questions.OpenEnded{} -> %>
-          <h4>Display text input</h4>
           <.form let={f} for={:open_ended_answer} phx-submit="answer_question">
-            <div class="flex flex-col">
-              <div>
-                <%= label(f, :answer, class: "input-label") %>
-                <%= textarea(f, :answer, class: "input") %>
-                <%= error_tag(f, :answer) %>
-              </div>
+            <div class="flex flex-col items-center gap-4 my-4 lg:my-12 text-yellow-400 font-bold">
+              <%= label(f, :answer, "Write your answer below:",
+                class: "text-xl lg:text-3xl lg:pb-4"
+              ) %>
+              <%= textarea(f, :answer,
+                class:
+                  "h-[75vh] lg:w-[75vw] rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg w-1/8"
+              ) %>
+              <%= error_tag(f, :answer) %>
 
-              <div class="p-4">
-                <%= submit("submit", class: "btn-blue") %>
-              </div>
+              <button type="submit" class="m-4 flex flex-col items-center">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-8 w-8 text-cyan-200"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                  stroke-width="2"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"
+                  />
+                </svg>
+                <p class="font-bold text-xl lg:text-3xl">Answer Question</p>
+              </button>
             </div>
           </.form>
         <% %Quizzaz.Games.Questions.ScrambleLetters{} -> %>
