--- a/lib/quizzaz_web/templates/layout/_user_menu.html.heex
+++ b/lib/quizzaz_web/templates/layout/_user_menu.html.heex
@@ -1,6 +1,16 @@
 <style>
   [x-cloak] { display: none }
 </style>
+<% 
+  settings_path = Routes.user_settings_path(@conn, :edit) 
+  new_game_path = Routes.game_new_path(@conn, :new)
+  my_stuff_path = Routes.game_index_path(@conn, :index)
+  browse_path = Routes.page_path(@conn, :index)
+  play_path = Routes.play_index_path(@conn, :index)
+  sign_up_path = Routes.user_registration_path(@conn, :new)
+  log_in_path = Routes.user_session_path(@conn, :new)
+  req_path = @conn.request_path
+%>
 <div class="flex flex-col items-center" x-data="{'showMenu': false}">
   <div class="flex flex-row items-center justify-between lg:justify-around lg:gap-20 w-full p-8 lg:p-20">
     <%= link("Quizzaz",
@@ -24,11 +34,11 @@
     x-cloak
     @click.outside="showMenu = false"
     id="mobile-menu"
-    class="absolute top-24 right-4 bg-purple-600 rounded-lg p-4 text-yellow-400 font-bold shadow-lg"
+    class="opacity-95 absolute top-24 right-4 bg-purple-600 rounded-lg p-4 text-yellow-400 font-bold shadow-lg"
   >
     <%= if @current_user do %>
       <p class="m-4"><%= @current_user.email %></p>
-      <a class="m-4 flex items-start gap-2" href={Routes.user_settings_path(@conn, :edit)}>
+      <a class="m-4 flex items-start gap-2" href={settings_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-6 w-6 text-cyan-200"
@@ -48,7 +58,7 @@
             d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
           />
         </svg>
-        <p>Settings</p>
+        <p class={if active_nav?(req_path, settings_path), do: "underline"}>Settings</p>
       </a>
       <%= link to: Routes.user_session_path(@conn, :delete), method: :delete, class: "m-4 flex items-start gap-2" do %>
         <svg
@@ -67,7 +77,7 @@
         </svg>
         <p>Log Out</p>
       <% end %>
-      <a class="m-4 flex items-start gap-2" href={Routes.game_index_path(@conn, :index)}>
+      <a class="m-4 flex items-start gap-2" href={new_game_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-6 w-6 text-cyan-200"
@@ -82,9 +92,9 @@
             d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
           />
         </svg>
-        <p>Create</p>
+        <p class={if active_nav?(req_path, new_game_path), do: "underline"}>Create</p>
       </a>
-      <a class="m-4 flex items-start gap-2" href={Routes.game_index_path(@conn, :index)}>
+      <a class="m-4 flex items-start gap-2" href={my_stuff_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-6 w-6 text-cyan-200"
@@ -99,9 +109,9 @@
             d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z"
           />
         </svg>
-        <p>My Stuff</p>
+        <p class={if active_nav?(req_path, my_stuff_path), do: "underline"}>My Stuff</p>
       </a>
-      <a class="m-4 flex items-start gap-2" href={Routes.game_index_path(@conn, :index)}>
+      <a class="m-4 flex items-start gap-2" href={browse_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-6 w-6 text-cyan-200"
@@ -118,9 +128,9 @@
             d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
           />
         </svg>
-        <p>Browse</p>
+        <p class={if active_nav?(req_path, browse_path), do: "underline"}>Browse</p>
       </a>
-      <a class="m-4 flex items-start gap-2" href={Routes.play_index_path(@conn, :index)}>
+      <a class="m-4 flex items-start gap-2" href={play_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-6 w-6 text-cyan-200"
@@ -143,7 +153,7 @@
         <p>Play</p>
       </a>
     <% else %>
-      <a class="m-4 flex items-start gap-2" href={Routes.user_registration_path(@conn, :new)}>
+      <a class="m-4 flex items-start gap-2" href={sign_up_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-6 w-6 text-cyan-200"
@@ -158,9 +168,9 @@
             d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z"
           />
         </svg>
-        <p>Sign Up</p>
+        <p class={if active_nav?(req_path, sign_up_path), do: "underline"}>Sign Up</p>
       </a>
-      <a class="m-4 flex items-start gap-2" href={Routes.user_session_path(@conn, :new)}>
+      <a class="m-4 flex items-start gap-2" href={log_in_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-6 w-6 text-cyan-200"
@@ -175,9 +185,9 @@
             d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"
           />
         </svg>
-        <p>Log In</p>
+        <p class={if active_nav?(req_path, log_in_path), do: "underline"}>Log In</p>
       </a>
-      <a class="m-4 flex items-start gap-2" href={Routes.game_index_path(@conn, :index)}>
+      <a class="m-4 flex items-start gap-2" href={browse_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-6 w-6 text-cyan-200"
@@ -194,9 +204,9 @@
             d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
           />
         </svg>
-        <p>Browse</p>
+        <p class={if active_nav?(req_path, browse_path), do: "underline"}>Browse</p>
       </a>
-      <a class="m-4 flex items-start gap-2" href={Routes.play_index_path(@conn, :index)}>
+      <a class="m-4 flex items-start gap-2" href={play_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-6 w-6 text-cyan-200"
@@ -225,7 +235,7 @@
     class="hidden lg:flex w-3/4 items-center justify-around mx-20 bg-purple-600 rounded-lg p-4 text-yellow-400 font-bold"
   >
     <%= if @current_user do %>
-      <a class="m-4 flex flex-col items-center gap-2" href={Routes.user_settings_path(@conn, :edit)}>
+      <a class="m-4 flex flex-col items-center gap-2" href={settings_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-10 w-10 text-cyan-200"
@@ -245,7 +255,7 @@
             d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
           />
         </svg>
-        <p class="text-3xl">Settings</p>
+        <p class={"#{if active_nav?(req_path, settings_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}>Settings</p>
       </a>
       <%= link to: Routes.user_session_path(@conn, :delete), method: :delete, class: "m-4 flex flex-col items-center gap-2" do %>
         <svg
@@ -264,7 +274,7 @@
         </svg>
         <p class="text-3xl">Log Out</p>
       <% end %>
-      <a class="m-4 flex flex-col items-center gap-2" href={Routes.game_index_path(@conn, :index)}>
+      <a class="m-4 flex flex-col items-center gap-2" href={new_game_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-10- w-10 text-cyan-200"
@@ -279,9 +289,9 @@
             d="M9 13h6m-3-3v6m5 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
           />
         </svg>
-        <p class="text-3xl">Create</p>
+        <p class={"#{if active_nav?(req_path, new_game_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}>Create</p>
       </a>
-      <a class="m-4 flex flex-col items-center gap-2" href={Routes.game_index_path(@conn, :index)}>
+      <a class="m-4 flex flex-col items-center gap-2" href={my_stuff_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-10 w-10 text-cyan-200"
@@ -296,9 +306,9 @@
             d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z"
           />
         </svg>
-        <p class="text-3xl">My Stuff</p>
+        <p class={"#{if active_nav?(req_path, my_stuff_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}>My Stuff</p>
       </a>
-      <a class="m-4 flex flex-col items-center gap-2" href={Routes.game_index_path(@conn, :index)}>
+      <a class="m-4 flex flex-col items-center gap-2" href={browse_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-10 w-10 text-cyan-200"
@@ -315,9 +325,9 @@
             d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
           />
         </svg>
-        <p class="text-3xl">Browse</p>
+        <p class={"#{if active_nav?(req_path, browse_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}>Browse</p>
       </a>
-      <a class="m-4 flex flex-col items-center gap-2" href={Routes.play_index_path(@conn, :index)}>
+      <a class="m-4 flex flex-col items-center gap-2" href={play_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-10 w-10 text-cyan-200"
@@ -342,7 +352,7 @@
     <% else %>
       <a
         class="m-4 flex flex-col items-center gap-2"
-        href={Routes.user_registration_path(@conn, :new)}
+        href={sign_up_path}
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -358,9 +368,9 @@
             d="M18 9v3m0 0v3m0-3h3m-3 0h-3m-2-5a4 4 0 11-8 0 4 4 0 018 0zM3 20a6 6 0 0112 0v1H3v-1z"
           />
         </svg>
-        <p class="text-3xl">Sign Up</p>
+        <p class={"#{if active_nav?(req_path, sign_up_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}>Sign Up</p>
       </a>
-      <a class="m-4 flex flex-col items-center gap-2" href={Routes.user_session_path(@conn, :new)}>
+      <a class="m-4 flex flex-col items-center gap-2" href={log_in_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-10 w-10 text-cyan-200"
@@ -375,9 +385,9 @@
             d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"
           />
         </svg>
-        <p class="text-3xl">Log In</p>
+        <p class={"#{if active_nav?(req_path, log_in_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}>Log In</p>
       </a>
-      <a class="m-4 flex flex-col items-center gap-2" href={Routes.game_index_path(@conn, :index)}>
+      <a class="m-4 flex flex-col items-center gap-2" href={browse_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-10 w-10 text-cyan-200"
@@ -394,9 +404,9 @@
             d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222"
           />
         </svg>
-        <p class="text-3xl">Browse</p>
+        <p class={"#{if active_nav?(req_path, browse_path), do: "underline underline-offset-8 decoration-4"} text-3xl"}>Browse</p>
       </a>
-      <a class="m-4 flex flex-col items-center gap-2" href={Routes.play_index_path(@conn, :index)}>
+      <a class="m-4 flex flex-col items-center gap-2" href={play_path}>
         <svg
           xmlns="http://www.w3.org/2000/svg"
           class="h-10 w-10 text-cyan-200"
