--- a/lib/quizzaz_web/templates/user_registration/new.html.heex
+++ b/lib/quizzaz_web/templates/user_registration/new.html.heex
@@ -1,26 +1,54 @@
-<h1>Register</h1>
+<div class="flex flex-col items-center my-8 text-center">
+  <div class="flex flex-col w-3/4 items-center justify-around mx-20 bg-purple-600 rounded-lg p-4 text-yellow-400 font-bold">
+    <h2 class="text-xl lg:text-3xl text-left lg:text-center p-2 lg:p-8">Sign up to start creating your own games!</h2>
+    <.form
+      let={f}
+      for={@changeset}
+      action={Routes.user_registration_path(@conn, :create)}
+      class="flex flex-col lg:items-center w-full"
+    >
+      <%= if @changeset.action do %>
+        <div class="alert alert-danger">
+          <p>Oops, something went wrong! Please check the errors below.</p>
+        </div>
+      <% end %>
 
-<.form let={f} for={@changeset} action={Routes.user_registration_path(@conn, :create)}>
-  <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
-  <% end %>
+      <%= email_input(f, :email,
+        required: true,
+        placeholder: "email",
+        class: "rounded-lg my-8 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+      ) %>
+      <%= error_tag(f, :email) %>
 
-  <%= label(f, :email, class: "input-label") %>
-  <%= email_input(f, :email, required: true) %>
-  <%= error_tag(f, :email) %>
+      <%= password_input(f, :password,
+        required: true,
+        placeholder: "password",
+        class: "rounded-lg my-8 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+      ) %>
+      <%= error_tag(f, :password) %>
 
-  <%= label(f, :password, class: "input-label") %>
-  <%= password_input(f, :password, required: true) %>
-  <%= error_tag(f, :password) %>
-
-  <div>
-    <%= submit("Register", class: "btn-blue") %>
+      <button type="submit" class="m-4 flex flex-col items-center">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-8 w-8 lg:h-10 lg:w-10 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M17.657 18.657A8 8 0 016.343 7.343S7 9 9 10c0-2 .5-5 2.986-7C14 5 16.09 5.777 17.656 7.343A7.975 7.975 0 0120 13a7.975 7.975 0 01-2.343 5.657z"
+          />
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M9.879 16.121A3 3 0 1012.015 11L11 14H9c0 .768.293 1.536.879 2.121z"
+          />
+        </svg>
+        <p class="font-bold text-xl lg:text-3xl">Sign Up</p>
+      </button>
+    </.form>
   </div>
-</.form>
-
-<p>
-  <%= link("Log in", to: Routes.user_session_path(@conn, :new)) %> |
-  <%= link("Forgot your password?", to: Routes.user_reset_password_path(@conn, :new)) %>
-</p>
+</div>
