--- a/lib/quizzaz_web/templates/user_settings/edit.html.heex
+++ b/lib/quizzaz_web/templates/user_settings/edit.html.heex
@@ -1,71 +1,110 @@
-<h1>Settings</h1>
+<div class="flex flex-col items-center my-8 text-center">
+  <div class="flex flex-col w-3/4 items-center justify-around mx-20 bg-purple-600 rounded-lg p-4 text-yellow-400 font-bold">
+    <.form
+      let={f}
+      for={@email_changeset}
+      action={Routes.user_settings_path(@conn, :update)}
+      id="update_email"
+      class="flex flex-col lg:items-center w-full"
+    >
+      <%= if @email_changeset.action do %>
+        <div class="alert alert-danger">
+          <p>Oops, something went wrong! Please check the errors below.</p>
+        </div>
+      <% end %>
 
-<h3>Change email</h3>
+      <%= hidden_input(f, :action, name: "action", value: "update_email") %>
 
-<.form
-  let={f}
-  for={@email_changeset}
-  action={Routes.user_settings_path(@conn, :update)}
-  id="update_email"
->
-  <%= if @email_changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
-  <% end %>
+      <%= label(f, :email, "email", class: "text-cyan-200 pt-4 pb-2") %>
+      <%= email_input(f, :email,
+        required: true,
+        class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+      ) %>
+      <%= error_tag(f, :email) %>
 
-  <%= hidden_input(f, :action, name: "action", value: "update_email") %>
+      <%= label(f, :current_password, "current password", class: "text-cyan-200 pb-2") %>
+      <%= password_input(f, :current_password,
+        required: true,
+        name: "current_password",
+        id: "current_password_for_email",
+        class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+      ) %>
+      <%= error_tag(f, :current_password) %>
 
-  <%= label(f, :email, class: "input-label") %>
-  <%= email_input(f, :email, required: true) %>
-  <%= error_tag(f, :email) %>
+      <button type="submit" class="m-4 flex flex-col items-center">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
+          />
+        </svg>
+        <p class="font-bold text-xl lg:text-3xl">change email</p>
+      </button>
+    </.form>
 
-  <%= label(f, :current_password, for: "current_password_for_email", class: "input-label") %>
-  <%= password_input(f, :current_password,
-    required: true,
-    name: "current_password",
-    id: "current_password_for_email"
-  ) %>
-  <%= error_tag(f, :current_password) %>
+    <.form
+      let={f}
+      for={@password_changeset}
+      action={Routes.user_settings_path(@conn, :update)}
+      id="update_password"
+      class="flex flex-col lg:items-center w-full"
+    >
+      <%= if @password_changeset.action do %>
+        <div class="alert alert-danger">
+          <p>Oops, something went wrong! Please check the errors below.</p>
+        </div>
+      <% end %>
 
-  <div>
-    <%= submit("Change email", class: "btn-blue") %>
+      <%= hidden_input(f, :action, name: "action", value: "update_password") %>
+
+      <%= label(f, :password, "New password", class: "text-cyan-200 pt-4 pb-2") %>
+      <%= password_input(f, :password,
+        required: true,
+        class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+      ) %>
+      <%= error_tag(f, :password) %>
+
+      <%= label(f, :password_confirmation, "Confirm new password", class: "text-cyan-200 pb-2") %>
+      <%= password_input(f, :password_confirmation,
+        required: true,
+        class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+      ) %>
+      <%= error_tag(f, :password_confirmation) %>
+
+      <%= label(f, :current_password, for: "current_password_for_password", class: "text-cyan-200 pb-2") %>
+      <%= password_input(f, :current_password,
+        required: true,
+        name: "current_password",
+        id: "current_password_for_password",
+        class: "rounded-lg mb-4 mx-2 text-purple-900 font-bold text-lg lg:w-1/3"
+      ) %>
+      <%= error_tag(f, :current_password) %>
+
+      <button type="submit" class="m-4 flex flex-col items-center">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="h-6 w-6 text-cyan-200"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"
+          />
+        </svg>
+        <p class="font-bold text-xl lg:text-3xl">change password</p>
+      </button>
+    </.form>
   </div>
-</.form>
-
-<h3>Change password</h3>
-
-<.form
-  let={f}
-  for={@password_changeset}
-  action={Routes.user_settings_path(@conn, :update)}
-  id="update_password"
->
-  <%= if @password_changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
-  <% end %>
-
-  <%= hidden_input(f, :action, name: "action", value: "update_password") %>
-
-  <%= label(f, :password, "New password", class: "input-label") %>
-  <%= password_input(f, :password, required: true) %>
-  <%= error_tag(f, :password) %>
-
-  <%= label(f, :password_confirmation, "Confirm new password", class: "input-label") %>
-  <%= password_input(f, :password_confirmation, required: true) %>
-  <%= error_tag(f, :password_confirmation) %>
-
-  <%= label(f, :current_password, for: "current_password_for_password", class: "input-label") %>
-  <%= password_input(f, :current_password,
-    required: true,
-    name: "current_password",
-    id: "current_password_for_password"
-  ) %>
-  <%= error_tag(f, :current_password) %>
-
-  <div>
-    <%= submit("Change password", class: "btn-blue") %>
-  </div>
-</.form>
+</div>
